@@ -73,6 +73,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #7773: Fix an UnboundLocalError in platform.linux_distribution() when
+  the release file is empty.
+
 - Issue #7561: Fix crashes when using bytearray objects with the posix
   module.
 
